Prepare application for Render deployment - Add render.yaml config - Update Dockerfile with multi-stage build - Configure environment variables for production - Add production profile configuration

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,13 +1,22 @@
 server:
   port: ${PORT:8080}
+  compression:
+    enabled: true
+  http2:
+    enabled: true
 
 spring:
   application:
     name: ai-dev-toolkit
+  jpa:
+    show-sql: false
+  output:
+    ansi:
+      enabled: never
 
 ai:
   openai:
-    api-key: ${OPENAI_API_KEY:your-api-key-here}
+    api-key: ${OPENAI_API_KEY}
     api-url: https://api.openai.com/v1/chat/completions
     model: gpt-3.5-turbo
     max-tokens: 2000
@@ -20,15 +29,12 @@ management:
         include: health,info
   endpoint:
     health:
-      show-details: when-authorized
-
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
+      show-details: never
 
 logging:
   level:
+    root: WARN
     com.steedware.toolkit: INFO
-    org.springframework.web: INFO
+    org.springframework.web: WARN
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
